# ccflow

./: README.md  pyproject.toml
src/ccflow/: __init__.py  ccflow.py
tests/: test_ccflow.py
